<resources>
    <string name="app_name">Lab1a Rock Paper Scissors</string>
    <string name="rock_button_text">Rock</string>
    <string name="paper_button_text">Paper</string>
    <string name="scissor_button_text">Scissor</string>
    <string name="class_text">CS 408 Lab #1A</string>
    <string name="title_text_1">Welcome to Rock-Paper-Scissors!</string>
    <string name="title_text_2">Please choose your weapon:</string>
    <string name="player_score">Player: 0</string>
    <string name="computer_score">Computer: 0</string>
    <string name="player_selection">Player\'s Weapon: </string>
    <string name="computer_selection">Computer\'s Weapon: </string>
    <string name="winning_message">The game has only just begun!</string>
    <string name="start_stop_button">Start</string>
</resources>