<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/class_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:text="@string/class_text"
            android:textColor="#263238"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/title_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/title_text_1"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/title_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/title_text_2"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider_top_buttons"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/rock_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:ellipsize="none"
            android:gravity="center_horizontal"
            android:text="@string/rock_button_text" />

        <Button
            android:id="@+id/paper_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/paper_button_text" />

        <Button
            android:id="@+id/scissors_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/scissor_button_text" />

        <View
            android:id="@+id/divider_buttons_score"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:paddingStart="80dp"
                android:paddingEnd="10dp"
                android:text="@string/player_score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/computer_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="90dp"
                android:text="@string/computer_score"
                android:textSize="18sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/player_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/player_selection"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/computer_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/computer_selection"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/winning_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/winning_message"
            android:textSize="20sp" />

        <Button
            android:id="@+id/start_stop_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/start_stop_button"
            android:translationY="200dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>